https://www.elastic.co/guide/en/apm/agent/java/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.19.1]]
==== 1.19.1 - YYYY/MM/DD

[float]
===== Features

[float]
===== Bug fixes

[float]
===== Refactors
* Migrate some plugins to indy dispatcher {pull}1405[1405]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.19.0]]
==== 1.19.0 - 2020/11/10

[float]
===== Features
* The agent version now includes a git hash if it's a snapshot version.
  This makes it easier to differ distinct snapshot builds of the same version.
  Example: `1.18.1-SNAPSHOT.4655910`
* Add support for sampling weight with propagation in `tracestate` W3C header {pull}1384[#1384]
* Adding two more valid options to the `log_level` config: `WARNING` (equivalent to `WARN`) and `CRITICAL`
  (will be treated as `ERROR`) - {pull}1431[1431]
* Add the ability to disable Servlet-related spans for `INCLUDE`, `FORWARD` and `ERROR` dispatches (without affecting
  basic Servlet capturing) by adding `servlet-api-dispatch` to <<config-disable-instrumentations>> - {pull}1448[1448]
* Add Sampling Profiler support for AArch64 architectures - {pull}1443[1443]
* Support proper transaction naming when using Spring's `ServletWrappingController` - {pull}1461[#1461]
* Update async-profiler to 1.8.2 {pull}1471[1471]
* Update existing Hibernate Search 6 instrumentation to work with the latest CR1 release
* Deprecating the `addLabel` public API in favor of `setLabel` (still supporting `addLabel`) - {pull}1449[#1449]

[float]
===== Bug fixes
* Fix `HttpUrlConnection` instrumentation issue (affecting distributed tracing as well) when using HTTPS without using
  `java.net.HttpURLConnection#disconnect` - {pull}1447[1447]