@@ -28,6 +28,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Fix small memory allocation regression introduced with tracestate header {pull}1508[#1508]
 
 [float]
 ===== Refactors
